Keyboard events suport implementation.